syntax = "proto2";

import "lib/decoders/decoders.proto";
import "lib/encoders/encoders.proto";
import "lib/imagereader/imagereader.proto";
import "lib/imagewriter/imagewriter.proto";
import "lib/fluxsource/fluxsource.proto";
import "lib/fluxsink/fluxsink.proto";
import "lib/usb/usb.proto";
import "lib/common.proto";

message InputProto {
	oneof input {
		ImageReaderProto image = 1;
		FluxSourceProto flux = 2;
	}
}

message OutputProto {
	oneof output {
		ImageWriterProto image = 1;
		FluxSinkProto flux = 2;
	}
}

message ConfigProto {
	optional string comment = 8;

	optional InputProto input = 1;
	optional OutputProto output = 2;
	optional EncoderProto encoder = 3;
	optional DecoderProto decoder = 4;
	optional UsbProto usb = 5;

	optional RangeProto cylinders = 6;
	optional RangeProto heads = 7;
}

